5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1846_1274.log
== SUBMITION (2019-06-25 17:04:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=int(input("numeros: "))

m=zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		if (i<j):
			m[i,j]=i+1
		else:
			m[i,j]=j+1
print(m)

-- EXECUTION TIME:
1.15274
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:16:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:22:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	if j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j>i):
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:22:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j>i):
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:23:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j>i):
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:23:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j>i):
			zeros[i,j]=j+1
		elif(i==j)
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
File "XXXX", line 13
    elif(i==j)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:24:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j>i):
			zeros[i,j]=j+1
		elif(i==j):
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:24:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j>i):
			zeros[i,j]=j+1
		elif(i==j):
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j<i):
			zeros[i,j]=j+1
		elif(i==j):
			zeros[i,j]=j+1

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=int(input("numero: "))
zeros=zeros((matriz,matriz), dtype=int)

for i in range(matriz):
	for j in range(matriz):
		if (i<j):
			zeros[i,j]=i+1
		elif(j<i):
			zeros[i,j]=j+1
		elif(i==j):
			zeros[i,j]=j+1

print(zeros)
-- EXECUTION TIME:
1.07552
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
